[gd_scene load_steps=24 format=3 uid="uid://btag0253s7hhs"]

[ext_resource type="PackedScene" uid="uid://yw5tcqcppqoe" path="res://scenes/components/health_component.tscn" id="1_0t1x8"]
[ext_resource type="Texture2D" uid="uid://b4vptrsau8q2x" path="res://scenes/objects/enemies/enemy_ghost/enemy_ghost.png" id="1_ajswv"]
[ext_resource type="Script" path="res://scenes/objects/enemies/enemy_ghost/enemy_ghost.gd" id="1_vrrot"]
[ext_resource type="PackedScene" uid="uid://dc8282q2n8jsw" path="res://scenes/components/death_component.tscn" id="2_rgcbp"]
[ext_resource type="PackedScene" uid="uid://df5x061wohblu" path="res://scenes/components/velocity_component.tscn" id="3_hl1u7"]
[ext_resource type="PackedScene" uid="uid://dchcwyt2xyoe3" path="res://scenes/components/enemy_drop_component.tscn" id="3_n351g"]
[ext_resource type="PackedScene" uid="uid://c0g8ng8v0ax3e" path="res://scenes/components/hurtbox_component.tscn" id="3_qyedp"]
[ext_resource type="PackedScene" uid="uid://ue4eajljk6rf" path="res://scenes/objects/pickups/experience_pickup/experience_pickup.tscn" id="4_qtp05"]
[ext_resource type="Script" path="res://resources/pickups/enemy_drop_item.gd" id="5_5foyw"]
[ext_resource type="PackedScene" uid="uid://c455ngw6uqq7v" path="res://scenes/components/hit_flash_component.tscn" id="6_ccajx"]
[ext_resource type="Shader" path="res://scenes/components/hit_flash_component.gdshader" id="7_pqba4"]
[ext_resource type="AudioStream" uid="uid://dk6dqwald2ey2" path="res://assets/audio/effects/enemy/enemy_hit/footstep_carpet_001.ogg" id="9_culm3"]
[ext_resource type="AudioStream" uid="uid://bh00fvtpctc4s" path="res://assets/audio/effects/enemy/enemy_hit/footstep_carpet_000.ogg" id="9_jrwwp"]
[ext_resource type="AudioStream" uid="uid://be06oso5m0e81" path="res://assets/audio/effects/enemy/enemy_hit/footstep_carpet_002.ogg" id="11_yt3s1"]
[ext_resource type="AudioStream" uid="uid://brfqxd4abc5om" path="res://assets/audio/effects/enemy/enemy_hit/footstep_carpet_003.ogg" id="12_l1iex"]
[ext_resource type="AudioStream" uid="uid://dh0xnsgk1hbce" path="res://assets/audio/effects/enemy/enemy_hit/footstep_carpet_004.ogg" id="13_xr2qq"]

[sub_resource type="Animation" id="Animation_i3hxi"]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySpriteParent/BodySprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySpriteParent/BodySprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_tqewg"]
resource_name = "walk"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySpriteParent/BodySprite:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.174533, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySpriteParent/BodySprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1.1, 0.9), Vector2(0.9, 1.1), Vector2(1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_is_moving"
}, {
"args": [false],
"method": &"set_is_moving"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t1rnl"]
_data = {
"RESET": SubResource("Animation_i3hxi"),
"walk": SubResource("Animation_tqewg")
}

[sub_resource type="Resource" id="Resource_5xcwe"]
script = ExtResource("5_5foyw")
item_scene = ExtResource("4_qtp05")
drop_amount = 2
weight = 10

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bx362"]
resource_local_to_scene = true
shader = ExtResource("7_pqba4")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_d8wc3"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_isn0h"]
radius = 6.0

[node name="EnemyGhost" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 32
collision_mask = 33
script = ExtResource("1_vrrot")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t1rnl")
}
autoplay = "walk"

[node name="HealthComponent" parent="." instance=ExtResource("1_0t1x8")]
max_health = 15.0

[node name="EnemyDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_n351g")]
item_table = Array[ExtResource("5_5foyw")]([SubResource("Resource_5xcwe")])
health_component = NodePath("../HealthComponent")

[node name="VelocityComponent" parent="." node_paths=PackedStringArray("sprite_parent") instance=ExtResource("3_hl1u7")]
max_speed = 60
acceleration = 40
sprite_parent = NodePath("../BodySpriteParent")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("6_ccajx")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../BodySpriteParent/BodySprite")
hit_flash_material = SubResource("ShaderMaterial_bx362")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("2_rgcbp")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../BodySpriteParent/BodySprite")
death_audio_streams = Array[AudioStream]([ExtResource("9_jrwwp"), ExtResource("9_culm3"), ExtResource("11_yt3s1"), ExtResource("12_l1iex"), ExtResource("13_xr2qq")])

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_qyedp")]
collision_layer = 0
health_component = NodePath("../HealthComponent")
hit_audio_streams = Array[AudioStream]([ExtResource("9_jrwwp"), ExtResource("9_culm3"), ExtResource("11_yt3s1"), ExtResource("12_l1iex"), ExtResource("13_xr2qq")])

[node name="HurtboxCollider" type="CollisionShape2D" parent="HurtboxComponent"]
visible = false
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_d8wc3")
debug_color = Color(0.741176, 0.447059, 0.368627, 0.419608)

[node name="BodySpriteParent" type="Node2D" parent="."]

[node name="BodySprite" type="Sprite2D" parent="BodySpriteParent"]
texture = ExtResource("1_ajswv")
offset = Vector2(0, -7)

[node name="BodyCollider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_isn0h")
